Rename namespace for CMake to srcML from LibsrcML

--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -22,8 +22,8 @@
 cmake_minimum_required(VERSION 3.24)
 project(srcML-Examples-libsrcml)
 
-if(SRCML_TEST_INSTALLED OR NOT TARGET LibsrcML::LibsrcML)
-    find_package(libsrcml REQUIRED)
+if(SRCML_TEST_INSTALLED OR NOT TARGET srcML::LibsrcML)
+    find_package(srcml REQUIRED)
 endif()
 
 # add examples
@@ -34,12 +34,13 @@ install(FILES CMakeLists.examples.txt DESTINATION share/srcml/examples RENAME CM
 
 if(BUILD_EXAMPLES OR PROJECT_IS_TOP_LEVEL)
 
-    set(CMAKE_C_STANDARD 99)
+    set(CMAKE_CXX_STANDARD 17)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
     foreach(EXAMPLE IN ITEMS ${EXAMPLES})
         get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
         add_executable(${EXAMPLE_NAME} ${EXAMPLE})
-        target_link_libraries(${EXAMPLE_NAME} PRIVATE LibsrcML::LibsrcML)
+        target_link_libraries(${EXAMPLE_NAME} PRIVATE srcML::LibsrcML)
         set_target_properties(${EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
     endforeach()
 
