--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -49,7 +49,7 @@ target_include_directories(ctpl_stl SYSTEM INTERFACE ${ctpl_stl_SOURCE_DIR})
 file(GLOB CLIENT_SOURCE *.hpp *.cpp)
 add_executable(srcml ${CLIENT_SOURCE})
 target_include_directories(srcml BEFORE PRIVATE .)
-target_link_libraries(srcml PRIVATE LibsrcML::LibsrcML LibArchive::LibArchive CURL::libcurl cli11 ctpl_stl)
+target_link_libraries(srcml PRIVATE srcML::LibsrcML LibArchive::LibArchive CURL::libcurl cli11 ctpl_stl)
 if(NOT MSVC)
     target_link_libraries(srcml PRIVATE Threads::Threads)
 endif()
