--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -110,34 +110,35 @@ include(CMakePackageConfigHelpers)
 # directory to put the config files
 if(WIN32)
     set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_LIBDIR}/..")
-elseif(NOT APPLE)
-    set(CONFIG_FILE_DESTINATION "/usr/share/cmake/libsrcml")
+elseif(APPLE)
+    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/srcml/")
 else()
-    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/libsrcml")
+    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/srcml")
 endif()
 
+message("CMAKE_INSTALL_DATADIR: ${CMAKE_INSTALL_DATADIR}")
 message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
 message("CONFIG_FILE_DESTINATION: ${CONFIG_FILE_DESTINATION}")
 
 install(EXPORT libsrcml_shared_Targets
         DESTINATION "${CONFIG_FILE_DESTINATION}"
-        NAMESPACE LibsrcML::
-        FILE LibsrcML-shared-targets.cmake
+        NAMESPACE srcML::
+        FILE srcML-shared-targets.cmake
         COMPONENT DEVLIBS)
 
 configure_package_config_file(
-    ${CMAKE_SOURCE_DIR}/LibsrcMLConfig.cmake.in ${CMAKE_BINARY_DIR}/libsrcmlConfig.cmake
+    ${CMAKE_SOURCE_DIR}/srcMLConfig.cmake.in ${CMAKE_BINARY_DIR}/srcMLConfig.cmake
     INSTALL_DESTINATION "${CONFIG_FILE_DESTINATION}"
     NO_SET_AND_CHECK_MACRO
     NO_CHECK_REQUIRED_COMPONENTS_MACRO
 )
 
 write_basic_package_version_file(
-    ${CMAKE_BINARY_DIR}/libsrcmlConfigVersion.cmake
+    ${CMAKE_BINARY_DIR}/srcMLConfigVersion.cmake
     VERSION "1.0.0"
     COMPATIBILITY "SameMajorVersion")
 
-install(FILES ${CMAKE_BINARY_DIR}/libsrcmlConfig.cmake ${CMAKE_BINARY_DIR}/libsrcmlConfigVersion.cmake
+install(FILES ${CMAKE_BINARY_DIR}/srcMLConfig.cmake ${CMAKE_BINARY_DIR}/srcMLConfigVersion.cmake
         DESTINATION "${CONFIG_FILE_DESTINATION}"
         COMPONENT DEVLIBS
 )
@@ -147,14 +148,14 @@ install(TARGETS libsrcml_static EXPORT libsrcml_static_Targets COMPONENT DEVLIBS
 
 install(EXPORT libsrcml_static_Targets
         DESTINATION "${CONFIG_FILE_DESTINATION}"
-        NAMESPACE LibsrcML::
-        FILE LibsrcML-static-targets.cmake
+        NAMESPACE srcML::
+        FILE srcML-static-targets.cmake
         COMPONENT DEVLIBS)
 
 if(LINK_LIBSRCML_STATIC AND BUILD_LIBSRCML_STATIC)
-    add_library(LibsrcML::LibsrcML ALIAS libsrcml_static)
+    add_library(srcML::LibsrcML ALIAS libsrcml_static)
 else()
-    add_library(LibsrcML::LibsrcML ALIAS libsrcml_shared)
+    add_library(srcML::LibsrcML ALIAS libsrcml_shared)
 endif()
 
 # install the libsrcml include file
