Try another directory for MSVC

--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -127,7 +127,7 @@ jobs:
         working-directory: build2
         continue-on-error: true
         run: |
-          cmake "/c/Program Files/srcML/share/srcml/examples" -G Ninja
+          cmake "/c/Program Files/srcML/share/srcml/examples" -DsrcML_DIR="C:/Program Files/srcML/cmake" -G Ninja
           ninja
 
       # - name: Setup msys2 with additional client-test packages for Windows
