--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -109,13 +109,14 @@ include(CMakePackageConfigHelpers)
 
 # directory to put the config files
 if(WIN32)
-    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_DATADIR}")
+    set(CONFIG_FILE_DESTINATION "cmake")
 elseif(APPLE)
     set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/srcml/")
 else()
     set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/srcml")
 endif()
 
+message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
 message("CONFIG_FILE_DESTINATION: ${CONFIG_FILE_DESTINATION}")
 
 install(EXPORT libsrcml_shared_Targets
