--- a/srcMLConfig.cmake.in
+++ b/srcMLConfig.cmake.in
@@ -13,7 +13,7 @@ foreach (LibsrcML_COMPONENT IN LISTS ${CMAKE_FIND_PACKAGE_NAME}_FIND_COMPONENTS)
         set(LibsrcML_COMPONENT_${LibsrcML_COMPONENT} YES)
     else()
         set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE
-            "LibsrcML does not recognize component `${LibsrcML_COMPONENT}`.")
+            "srcML does not recognize component `${LibsrcML_COMPONENT}`.")
         set(${CMAKE_FIND_PACKAGE_NAME}_FOUND FALSE)
         return()
     endif()
@@ -22,7 +22,7 @@ endforeach()
 # Not allowed to specify both static and shared components
 if(LibsrcML_COMPONENT_STATIC AND LibsrcML_COMPONENT_SHARED)
     set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE
-        "LibsrcML components `static` and `shared` are mutually exclusive.")
+        "srcML components `static` and `shared` are mutually exclusive.")
     set(${CMAKE_FIND_PACKAGE_NAME}_FOUND FALSE)
     return()
 endif()
@@ -45,12 +45,12 @@ include("${LibsrcML_${COMPONENT}_targets}")
 
 find_path(srcML_INCLUDE_DIR
   NAMES srcml.h
+  PATHS "${CMAKE_CURRENT_LIST_DIR}/../include"
   DOC "libsrcml include directory"
 )
 
 # Add the include file
 target_include_directories(srcML::libsrcml_${COMPONENT} PUBLIC INTERFACE ${srcML_INCLUDE_DIR})
-unset(LibsrcML_INCLUDE_DIR)
 
 # Find dependencies
 # find_package(LibXml2 REQUIRED)
