--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,8 +50,7 @@ endif()
 
 if(MSVC)
     add_compile_options(/Zc:throwingNew)
-    string(REPLACE "/Ob2" "/Ob3" SRCML_INIT "${CMAKE_CXX_FLAGS_RELEASE_INIT}")
-    set(CMAKE_CXX_FLAGS_RELEASE_INIT "${SRCML_INIT}")
+    string(REPLACE "Ob2" "Ob3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 endif()
 
 # For macOS Catalina and more recent, the provided libarchive is at least version 3.3
