--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,4 +19,10 @@
 # 
 # CMake files for examples
 
+# Turn ON/OFF building examples
+option(BUILD_EXAMPLES "Build examples usage files for libsrcml" OFF)
+if(BUILD_ALL)
+    set(BUILD_EXAMPLES ON)
+endif()
+
 add_subdirectory(libsrcml)
