--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -19,6 +19,17 @@
 # 
 # CMake files for building the parser
 
+# TinySHA1 external include
+include(FetchContent)
+FetchContent_Declare(TinySHA1
+  GIT_REPOSITORY https://github.com/mohaps/tinysha1
+  GIT_TAG        2795aa8de91b1797defdfbff61ed93b22b5ced81
+  GIT_SHALLOW    TRUE
+)
+FetchContent_MakeAvailable(TinySHA1)
+add_library(TinySHA1 INTERFACE IMPORTED)
+target_include_directories(TinySHA1 INTERFACE ${tinysha1_SOURCE_DIR})
+
 find_package(LibXml2 REQUIRED)
 find_package(Iconv REQUIRED)
 find_package(Java COMPONENTS Runtime REQUIRED)
