Copy needed files for examples into bin directory

--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -20,6 +20,8 @@ install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT EXAMPLES)
 install(FILES CMakeLists.examples.txt DESTINATION share/srcml/examples RENAME CMakeLists.txt COMPONENT EXAMPLES)
 install(FILES decl_stmt.cpp expr.cpp define.cpp project.xml copy.xsl schema.rng DESTINATION share/srcml/examples COMPONENT EXAMPLES)
 
+file(COPY decl_stmt.cpp expr.cpp define.cpp project.xml schema.rng copy.xsl DESTINATION "${CMAKE_BINARY_DIR}/bin")
+
 if(BUILD_EXAMPLES OR PROJECT_IS_TOP_LEVEL)
 
     set(CMAKE_CXX_STANDARD 17)
