--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -220,7 +220,7 @@ jobs:
         continue-on-error: true
         run: |
           export SRCML_HOME="/c/Program Files/srcML/bin/"
-          ctest -C Release -VV
+          ctest -C Release -j 8`
 
       - uses: actions/upload-artifact@v3
         with:
