Add the patch comments to the patch file

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -26,6 +26,7 @@ include(FetchContent)
 FetchContent_Declare(antlrsrc
     URL https://www.antlr2.org/download/antlr-2.7.7.tar.gz
     PATCH_COMMAND patch -p 1 -i ${CMAKE_CURRENT_SOURCE_DIR}/antlr.patch
+    USES_TERMINAL_PATCH ON
 )
 FetchContent_GetProperties(antlrsrc)
 if(NOT antlrsrc_POPULATED)
