--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,6 @@
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(MSVC)
-    add_compile_options(/Zc:throwingNew)
-    string(REPLACE "Ob2" "Ob3" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-endif()
-
 # For Windows, install redist exe
 set(CMAKE_INSTALL_SYSTEM_RUNTIME_COMPONENT SRCML)
 include(InstallRequiredSystemLibraries)
@@ -25,6 +20,9 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.24")
     cmake_policy(SET CMP0135 NEW)
 endif()
+# Exeternally defined compile and link options
+add_compile_options("${SRCML_GLOBAL_COMPILE_OPTIONS}")
+add_link_options("${SRCML_GLOBAL_LINK_OPTIONS}")
 
 add_subdirectory(client)
 add_subdirectory(parser)
